# SevSeg-YOLO

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
configs/: train_score.yaml
sevseg_yolo/: __init__.py  convert.py  evaluation.py  export.py  mask_generator.py  mask_generator_v2.py  mask_generator_v3.py  model.py  predict.py  tensorrt_deploy.py  utils.py  visualization.py
tools/: predict_demo.py  visualize_masks.py
ultralytics/cfg/: __init__.py
ultralytics/cfg/models/26/: yolo26-score.yaml
ultralytics/data/: augment.py  dataset.py  utils.py
ultralytics/engine/: exporter.py  validator.py
ultralytics/models/yolo/: model.py
ultralytics/models/yolo/detect/: __init__.py  predict.py  train.py  val.py
ultralytics/nn/: autobackend.py  tasks.py
ultralytics/nn/modules/: __init__.py  head.py
ultralytics/utils/: loss.py
